Fix scrollbar showing when hover volume

--- a/demos/moderation/src/components/Waveform.css
+++ b/demos/moderation/src/components/Waveform.css
@@ -20,6 +20,10 @@
   width: 100%;
 }
 
+.Waveform__waveform wave {
+  overflow: hidden !important;
+}
+
 .Waveform__volume {
   display: flex;
   align-items: center;
